feat(owasp): le Top 10 par règle, et ce que le produit ne sait pas regarder
Le rapport OWASP est écrit par le modèle configuré : il lit le backlog et
produit la prose, qui est la partie qu'une personne veut et qu'aucun
moteur de règles n'écrit. **Ce n'est pas une preuve.** Un évaluateur ne
peut pas accepter un document dont le contenu dépend du modèle qui a
répondu, et une catégorie verte au trimestre dernier et ambre celui-ci ne
lui a rien dit du parc.

La grille répond aux mêmes dix questions à partir du seul type du constat.
IaC vers A05, vulnérabilités et fin de vie vers A06, secrets vers A07 —
trois phrases vérifiables. Chaque ligne porte la raison de son état.

**Quatre états, parce que deux mentiraient.** Une catégorie sans constat
et une catégorie que rien ne regarde produisent le même vert : c'est le
même défaut que la fenêtre de fraîcheur a retiré de la matrice de
conformité et que le bandeau a retiré de l'écran qualité, à l'endroit
précis où un auditeur regarde en premier.

**Sept des dix ne sont couvertes par aucun scanner ici**, et le dire est
la chose la plus utile que cette grille fasse. L'analyse de code ne place
aucun constat : une règle Semgrep peut déclarer sa catégorie OWASP dans
ses métadonnées, et `SastScanner` ne les lit pas. Les placer en cherchant
des morceaux dans un identifiant de règle serait reproductible et
resterait une supposition — c'est précisément ce que « déterministe » est
censé remplacer.

Un secret va vers A07 et non vers les deux : CWE-798 y est l'entrée
canonique, et une clé cryptographique en dur relèverait d'A02 sans que
rien dans la sortie d'un scanner de secrets dise laquelle des deux. Un
constat compté deux fois gonfle le seul chiffre qui compte ici.

---

Deux défauts trouvés en chemin. Le garde de collision a attrapé mon propre
`Line`, homonyme de celui de la déclaration d'applicabilité, avant qu'il
n'atteigne le contrat.

Et `Map.copyOf` ne conserve pas l'ordre d'insertion : son itération est
salée par JVM, donc la gr